--- a/module/pom.xml
+++ b/module/pom.xml
@@ -52,6 +52,10 @@
             <version>${uvms.commons.version}</version>
         </dependency>
         <dependency>
+            <groupId>eu.europa.ec.fisheries.uvms.commons</groupId>
+            <artifactId>uvms-commons-date</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.geotools</groupId>
             <artifactId>gt-shapefile</artifactId>
             <exclusions>
@@ -70,10 +74,6 @@
                     <artifactId>javaee-api</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
         </dependency>
         <dependency>
             <groupId>fish.focus.uvms.maven</groupId>
