Add Loggin-Profile manifest entry

--- a/module/pom.xml
+++ b/module/pom.xml
@@ -21,6 +21,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-ear-plugin</artifactId>
                 <configuration>
+                    <archive>
+                        <manifestEntries>
+                            <Logging-Profile>spatial-logging-profile</Logging-Profile>
+                        </manifestEntries>
+                    </archive>
                     <modules>
                         <ejbModule>
                             <groupId>${project.groupId}</groupId>
