--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,16 @@
 
     </dependencyManagement>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>3.5.3</version>
+            </plugin>
+        </plugins>
+    </build>
+
     <scm>
         <connection>${scm.connection}</connection>
         <tag>HEAD</tag>
